...
                    onChange={(event) =>
                      setData({ ...data, priority: event.target.value })
                    }
                  >
                    <option value="no-priority">No priority</option>
                    <option value="urgent">Urgent</option>
                    <option value="high">High</option>
                    <option value="medium">Medium</option>
                    <option value="low">Low</option>
                  </select>
                </div>
              </div>
              <div className="grid gap-3 sm:grid-cols-2">
...
